--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@ a:focus {
 	outline: none;
 }
 
+a:hover {
+	color: inherit;
+	text-decoration: none;
+}
+
 a img, img {
 	border: none;
 }
@@ -115,11 +120,12 @@ nav#mainmenu ul {
 
 nav#mainmenu  ul li {
 	display: inline;
-	padding: 0 2.5em;
+	padding: 0 1.5em;
 }
 
 nav#mainmenu ul li a {
 	padding: 0 0.5em;
+
 }
 
 nav#mainmenu ul li.active a {
@@ -197,4 +203,13 @@ nav#mainmenu ul li a:hover {
 	background: #FAFAFA;
 	border: 1px solid #EEE;
 	border-width: 1px 0;
+}
+
+form .row {
+	margin-top: 1em;
+}
+
+.form-control:focus {
+	border-color: #D27721;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(210, 119, 33, 0.6);
 }
