--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,10 @@
-a {
+a, a:focus, a:hover {
 	color: inherit;
 	text-decoration: none;
 }
 
 a:focus {
 	outline: none;
-}
-
-a:hover {
-	color: inherit;
-	text-decoration: none;
 }
 
 a img, img {
