--- a/css/site.css
+++ b/css/site.css
@@ -69,13 +69,14 @@ a:hover {
   position: relative;
 }
 #section1 .container {
-  padding-top: 25%;
+  padding-top: 2%;
   position: relative;
   z-index: 3;
 }
 #section1 h1 {
   font-size: 4em;
   font-weight: 400;
+  margin-top: 50%;
 }
 #section1 h2 {
   font-size: 1.75em;
@@ -135,6 +136,12 @@ a:hover {
 #section1 .news > h3 {
   font-size: 20px;
   font-weight: 400;
+}
+#section1 .news h4.title {
+  font-family: Courier New, monospaced;
+}
+#section1 .news a {
+  color: #FFF;
 }
 #section2 {
   background: url('../images/section2.jpg');
@@ -229,16 +236,20 @@ a:hover {
 .weekday p {
   font-size: 1.125em;
 }
-@media (min-width: 768px) and (max-width: 991px) {
-  #section1 .container {
-    padding-top: 7%;
+/*@media (min-width: 768px) and (max-width: 991px) {
+  #section1 {
+    .container {
+      padding-top: 7%;
+    }
+
+    h1 {
+      padding-top: 20%;
+      font-size: 3em;
+    }
   }
-  #section1 h1 {
-    padding-top: 20%;
-    font-size: 3em;
-  }
-}
-@media (max-width: 767px) {
+
+}*/
+@media (max-width: 991px) {
   .navbar {
     background: #222222;
     z-index: 4;
@@ -274,14 +285,17 @@ a:hover {
     padding: 5em 0 15em;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #section1 {
     background: none;
   }
 }
 @media (min-width: 1200px) {
   #section1 .container {
-    padding-top: 30%;
+    padding-top: 17%;
+  }
+  #section1 .container h1 {
+    margin-top: 30%;
   }
 }
 footer {
