--- a/css/site.less
+++ b/css/site.less
@@ -80,7 +80,7 @@ a {
   position: relative;
 
   .container {
-    padding-top: 25%;
+    padding-top: 2%;
     position: relative;
     z-index: 3;
 
@@ -89,6 +89,7 @@ a {
   h1 {
     font-size: 4em;
     font-weight: 400;
+    margin-top: 50%;
   }
 
   h2 {
@@ -157,6 +158,14 @@ a {
     > h3 {
       font-size: 20px;
       font-weight: 400;
+    }
+
+    h4.title {
+      font-family: Courier New, monospaced;
+    }
+
+    a {
+      color: #FFF;
     }
   }
 }
@@ -277,7 +286,7 @@ a {
 }
 
 
-@media (min-width: 768px) and (max-width: 991px) {
+/*@media (min-width: 768px) and (max-width: 991px) {
   #section1 {
     .container {
       padding-top: 7%;
@@ -289,9 +298,9 @@ a {
     }
   }
 
-}
+}*/
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
 
   .navbar {
     background: rgb(34,34,34);
@@ -338,7 +347,7 @@ a {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   #section1 {
     background: none;
   }
@@ -347,7 +356,11 @@ a {
 @media (min-width: 1200px) {
   #section1 {
     .container {
-      padding-top: 30%;
+      padding-top: 17%;
+
+      h1 {
+        margin-top: 30%;
+      }
     }
   }
 }
