--- a/css/site.less
+++ b/css/site.less
@@ -168,6 +168,14 @@ a {
       color: #FFF;
     }
   }
+
+  .blog:extend(#section1 .news all) {
+
+    h3 {
+      font-size: 18px;
+    }
+
+  }
 }
 
 #section2 {
