--- a/css/site.less
+++ b/css/site.less
@@ -161,7 +161,8 @@ a {
     }
 
     h4.title {
-      font-family: Courier New, monospaced;
+      text-transform: uppercase;
+      font-size: 1em;
     }
 
     a {
