--- a/css/site.less
+++ b/css/site.less
@@ -51,11 +51,13 @@ a {
     background: #333;
     transition: .25s all;
     color: #EFEFEF;
-    font-weight: 600;
     padding: .25em .75em .25em .5em;
+    font-family: Courier New, monospaced;
+    font-weight: 500;
 
     img {
-      height: 40px;
+      height: 45px;
+      display: inline-block;
     }
 
     &:hover {
@@ -283,6 +285,10 @@ a {
   h2 {
     font-size: 1.25em;
     margin: .25em 0;
+
+    i {
+      color: #EEE;
+    }
   }
 
   h3 {
