--- a/css/site.css
+++ b/css/site.css
@@ -47,11 +47,13 @@ a:hover {
   background: #333;
   transition: .25s all;
   color: #EFEFEF;
-  font-weight: 600;
   padding: .25em .75em .25em .5em;
+  font-family: Courier New, monospaced;
+  font-weight: 500;
 }
 .navbar-inverse .navbar-brand img {
-  height: 40px;
+  height: 45px;
+  display: inline-block;
 }
 .navbar-inverse .navbar-brand:hover {
   background: #CC0002;
@@ -237,6 +239,9 @@ a:hover {
 .weekday h2 {
   font-size: 1.25em;
   margin: .25em 0;
+}
+.weekday h2 i {
+  color: #EEE;
 }
 .weekday h3 {
   font-size: 1.25em;
