--- a/css/site.scss
+++ b/css/site.scss
@@ -1,15 +1,23 @@
 $accent: #e74c3c;
 $blue: #3c40e7;
 
+html {
+  height: 100%;
+}
+
 html,
 body {
-  height: 100%;
   font-size: 16px;
+}
+
+body {
+  min-height: 100%;
+  position: relative;
 }
 
 html, body, h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", Arial, sans-serif;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 a {
@@ -49,99 +57,60 @@ a {
   padding-top: 20px;
 }
 
-#section1_wrapper {
-
-  @media screen and (min-width: 992px) {
-    height: 0;
-    padding-bottom: 56.25%;
-  }
-}
-
 #section1 {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  align-content: center;
+	text-align: center;
 
-  background: url('../images/section1.jpg') fixed;
+	height: 300px;
+
+  background: $accent;
   color: #F8F8F8;
   text-shadow: 1px 1px 3px #000;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+
+	@media (min-width: 992px) {
+		height: 100vh;
+		background: #333;
+	}
 
   #section1_inside {
     position: relative;
     z-index: 3;
     width: 100%;
-    padding: 0 2rem 1rem;
+
+	  @media (min-width: 992px) {
+		  transform: translateY(2rem);
+	  }
   }
 
   h1 {
-    font-size: 3em;
+		font-size: 2.5rem;
     font-weight: 400;
+	  max-width: 75rem;
+	  margin: 0 auto;
+
+	  &.full {
+		  display: none;
+	  }
+
+	  @media (min-width: 992px) {
+		  font-size: 3rem;
+
+		  &.full {
+			  display: block;
+		  }
+
+		  &.mobile {
+			  display: none;
+		  }
+	  }
   }
 
   h2 {
     display: inline-block;
     font-size: 1.25em;
-    font-family: Courier New, monospace;
-    margin-top: 0;
-  }
-
-  nav {
-    a {
-      color: #EEE;
-      margin: 0 .75em;
-
-      &.button {
-        background: rgba(0,0,0,0.1);
-        border: 2px solid #eeeeee;
-        font-size: 14px;
-        font-weight: 400;
-        margin: 0 20px 10px 0;
-        padding: 10px 15px;
-        text-transform: uppercase;
-        display: inline-block;
-
-        &.right {
-          float: right;
-          margin: 0 0 10px 20px;
-        }
-
-        &.red {
-          background: $accent;
-          &:hover {
-            color: $accent;
-            border-color: $accent;
-          }
-        }
-
-        &.blue {
-          background: $blue;
-          &:hover {
-            color: $blue;
-            border-color: $blue;
-          }
-        }
-
-        &.red, &.blue {
-          &:hover {
-            background: #EEE;
-            text-shadow: 1px 1px 2px $accent;
-          }
-        }
-
-        &:hover {
-          background: rgba(0,0,0,0.3);
-          color: #FFF;
-          border-color: #FFF;
-          text-decoration: none;
-        }
-
-      }
-
-    }
+	  margin: .5rem auto 0;
   }
 
   video {
@@ -151,140 +120,171 @@ a {
     left: 0;
     width: 100%;
     height: auto;
-    z-index: 3;
   }
 
-  .news, .blog {
-    background: rgb(99,99,99);
-    background: rgba(0,0,0,0.75);
-    border: 1px solid #333;
-    border-width: 1px 0;
-    font-weight: 400;
-    clear: both;
+	#arrow {
+		$size: 2rem;
 
-    h3 {
-      font-size: 1.5rem;
-      margin: 10px 0 5px;
-      padding-top: 1rem;
-      padding-bottom: 5px;
-      border-bottom: 1px solid rgba(255,255,255,.1);
+		display: none;
+		background: rgba(255,255,255, .1);
+		opacity: 0;
+		width: $size;
+		height: $size;
+		line-height: $size;
+		border-radius: $size;
+		margin: 1rem auto 0;
+		animation-duration: 3s;
+		animation-name: arrow;
+		animation-fill-mode: forwards;
+		transition: opacity .2s, transform .2s;
 
-      &:first-of-type {
-        border-top: none;
-        padding-top: 0;
-      }
-    }
+		@media (min-width: 992px) {
+			display: block;
+		}
 
-    h4.title {
-      text-transform: uppercase;
-      font-size: 1rem;
-    }
+		&:hover {
+			background: rgba(255,255,255, .2);
+		}
 
-    h4 {
-      font-size: 1rem;
-      font-weight: 400;
-    }
+		a {
+			color: #FFF;
 
-    h5 {
-      padding-top: .5rem;
-    }
+			&:focus {
+				outline: none;
+			}
+		}
+	}
+}
 
-    a {
-      color: #FFF;
-    }
-  }
+#section2 {
+  background: url('../images/light.png');
+  border-top: 2px solid #000;
+	padding-bottom: 2rem;
+
+	.container {
+		display: flex;
+		flex-wrap: wrap;
+		position: relative;
+		margin: 3rem auto;
+
+		h2, p {
+			flex: 1 1 100%;
+			text-align: center;
+			margin: 1rem;
+		}
+
+		h2 {
+			font-weight: 300;
+			font-size: 2.5rem;
+		}
+
+		.blog {
+			padding: 0 1rem;
+			flex: 1 0 100%;
+			background: rgba(255,255,255,.2);
+			margin: 1rem;
+
+			h3 {
+				font-size: 2rem;
+				text-align: center;
+			}
+		}
+	}
+}
+
+#section3 {
+  background: $accent url('../images/dark.png');
+  border-top: 2px solid #000;
+  padding: 3em 0;
+  color: #FFF;
+  text-shadow: 0 0 1px #999;
+	position: relative;
 
   .news {
     display: flex;
     flex-wrap: wrap;
     position: relative;
 
+	  h2 {
+		  font-weight: 300;
+		  font-size: 2.5rem;
+	  }
+
+	  h2, p {
+		  flex: 1 1 100%;
+		  margin: 1rem;
+		  text-align: center;
+	  }
+
     .day {
-      padding: 0 1rem;
-      flex: 1 0 200px;
+      flex: 1 0 300px;
+      background: rgba(0,0,0,.2);
+	    margin: 1rem;
 
       h3 {
+	      background: #181818;
+	      padding: .75rem 1rem;
+	      margin: 0 0 1rem;
+
         .smaller {
           font-size: .825rem;
+	        margin-left: .25rem;
         }
       }
 
+	    h4, h5 {
+		    padding: 0 1rem;
+	    }
+
+	    h4 {
+		    font-size: 1rem;
+
+		    .title {
+			    margin: .25rem 0 1rem;
+			    display: block;
+		    }
+	    }
+
       h5:not(:first-of-type) {
         border-top: 1px dotted rgba(255,255,255,.15);
+	      padding-top: 1rem;
       }
     }
 
     #calendar_link {
-      font-weight: 300;
-      position: absolute;
-      right: .5rem;
-      bottom: .5rem;
-      font-size: .825rem;
+	    flex: 1 1 100%;
+	    padding: 1rem;
+	    text-align: center;
+	    background: $accent;
+	    color: #FFF;
+	    margin: 1rem;
+
+	    &:hover {
+		    background: darken($accent,3);
+		    text-decoration: none;
+	    }
     }
-  }
-
-  .blog {
-    h3 {
-      font-size: 18px;
-    }
-
-  }
-}
-
-#section2 {
-  background: url('../images/section3.jpg') fixed bottom center;
-  background-size: cover;
-  -webkit-background-size: cover;
-  border-top: 5px solid #000;
-  color: #EFEFEF;
-
-  .text {
-    background: rgb(66,66,66);
-    background: rgba(0,0,0,0.8);
-    font-size: 20px;
-    margin: 0 auto;
-    max-width: 45em;
-    padding: 4em 2.5em;
-    text-shadow: 0 0 2px #111;
-
-    &.freshers {
-      font-size: inherit;
-      background: #34495e;
-    }
-  }
-
-  .weekday {
-    h3 {
-      margin: 10px 0 20px;
-    }
-  }
-}
-
-#section3 {
-  background: $accent url('../images/section3.jpg') fixed bottom center;
-  -webkit-background-size: cover;
-  background-size: cover;
-  border-top: 5px solid #000;
-  padding: 3em 0;
-  color: #FFF;
-  text-shadow: 0 0 1px #999;
+  } 
 }
 
 #section4 {
   background: #000 url('../images/section4.jpg') no-repeat fixed bottom center;
   -webkit-background-size: contain;
   background-size: contain;
-  border-top: 5px solid #000;
+  border-top: 2px solid #000;
   padding: 10em 0;
   color: #FFF;
   font-size: 16px;
 
-  h1 {
+  h2 {
     margin: 0 0 1em;
+	  font-weight: 300;
+	  font-size: 2.5rem;
   }
 
   h3 {
     margin: 2em 0 1em;
+	  font-weight: 300;
   }
 
   a {
@@ -310,12 +310,7 @@ a {
 
   #section1 {
 
-    position: static;
-    padding: 0;
-    height: auto;
-    background-position: center center;
-
-    h1, nav {
+    h1 {
       margin-left: 1rem;
       margin-right: 1rem;
     }
@@ -344,21 +339,8 @@ a {
     }
   }
 
-  #section2 .text {
-    font-size: 1.125em;
-    font-weight: 300;
-    padding: 3em 1em;
-    margin: 0 -15px;
-  }
-
   #section4 {
     padding: 5em 0 15em;
-  }
-}
-
-@media (min-width: 992px) {
-  #section1 {
-    background: none;
   }
 }
 
@@ -370,8 +352,105 @@ footer {
   font-weight: 400;
 }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  #section1, #section2, #section3, #section4 {
-    background-attachment: scroll !important;
+#feedback_form, #thankyou {
+
+  font-family: 'Droid Serif', Georgia, serif;
+  font-size: 1.5rem;
+  max-width: 44rem;
+  margin: 0 auto;
+  padding: 5rem 0;
+  color: rgba(0,0,0,0.8);
+
+  label {
+	font-size: 2rem;
+	display: block;
   }
+
+  textarea {
+	display: block;
+	border: none;
+	margin: 1rem 0;
+	width: 100%;
+	resize: none;
+	overflow-y: hidden;
+	min-height: 10rem;
+  }
+
+  input[type=submit] {
+	border: 2px solid #666;
+	border-radius: 10px;
+	background: #FFF;
+	padding: .5rem 1rem;
+	font-size: 1rem;
+
+	&:hover {
+	  border-color: #333;
+	  background: #F8F8F8;
+	}
+
+	&:active {
+	  color: #333;
+	  background: #E8E8E8;
+	}
+  }
+}
+
+#feedback_footer {
+  color: rgba(80,80,80,0.5);
+  border-top: 1px solid rgba(128,128,128,0.25);
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  padding: .75rem 0;
+  width: 100%;
+  font-size: 0.825rem;
+  font-family: 'Droid Serif', Georgia, serif;
+}
+
+#thankyou {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  max-width: none;
+  color: rgba(80,80,80,0.5);
+  font-size: 1.2rem;
+
+  h1 {
+	color: rgba(0,0,0,.8);
+	font-size: 1.6rem;
+	font-family: inherit;
+  }
+
+  iframe {
+	display: block;
+	margin: 4rem auto 0;
+  }
+}
+
+@keyframes arrow {
+	0% {
+		opacity: 0;
+	}
+
+	75% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+
+	80% {
+		transform: translateY(10px);
+	}
+
+	85% {
+		transform: translateY(0);
+	}
+
+	90% {
+		transform: translateY(10px);
+	}
+
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
 }
